<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ NOTICE                                                                    ~
  ~                                                                           ~
  ~ This software (or technical data) was produced for the U.S. Government    ~
  ~ under contract, and is subject to the Rights in Data-General Clause       ~
  ~ 52.227-14, Alt. IV (DEC 2007).                                            ~
  ~                                                                           ~
  ~ Copyright 2023 The MITRE Corporation. All Rights Reserved.                ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2023 The MITRE Corporation                                      ~
  ~                                                                           ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");           ~
  ~ you may not use this file except in compliance with the License.          ~
  ~ You may obtain a copy of the License at                                   ~
  ~                                                                           ~
  ~    http://www.apache.org/licenses/LICENSE-2.0                             ~
  ~                                                                           ~
  ~ Unless required by applicable law or agreed to in writing, software       ~
  ~ distributed under the License is distributed on an "AS IS" BASIS,         ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ~
  ~ See the License for the specific language governing permissions and       ~
  ~ limitations under the License.                                            ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.mitre.mpf</groupId>
    <artifactId>mpf-project</artifactId>
    <packaging>pom</packaging>
    <version>8.0</version>
    <name>Media Processing Framework</name>

    <!-- poms in the following subdirectories -->
    <modules>
        <module>logging-dependencies.xml</module>
        <module>trunk</module>
        <module>trunk/protobuf</module>
        <module>trunk/interop</module>
        <module>trunk/markup</module>
        <module>trunk/video-overlay</module>
        <module>trunk/node-manager</module>
        <module>trunk/mpf-rest-api</module>
        <module>trunk/mpf-rest-client</module>
        <module>trunk/workflow-manager</module>
        <module>trunk/mpf-system-tests</module>
        <module>trunk/mpf-install</module>
        <module>trunk/detection/executor/java</module>
        <module>trunk/detection/test-components/java</module>
    </modules>

    <profiles>
        <profile>
            <id>jenkins</id>
            <properties>
                <components.build.dir>${env.WORKSPACE}/mpf-component-build</components.build.dir>
                <components.build.parallel.builds>2</components.build.parallel.builds>
                <components.build.make.jobs>8</components.build.make.jobs>
                <startup.auto.registration.skip>false</startup.auto.registration.skip>
            </properties>
        </profile>

        <profile>
            <id>create-tar</id>
            <properties>
                <components.build.parallel.builds>2</components.build.parallel.builds>
                <components.build.make.jobs>8</components.build.make.jobs>
                <components.build.components/>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>maven-us.nuxeo.org-vendor-releases</id>
            <name>nexus-vendor-releases</name>
            <url>https://maven-us.nuxeo.org/nexus/content/repositories/vendor-releases/</url>
        </repository>
    </repositories>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.test.failure.ignore>true</maven.test.failure.ignore>

        <!-- Version numbers that are used more than once. -->
        <spring.framework.version>5.3.30</spring.framework.version>
        <hibernate.framework.version>5.6.14.Final</hibernate.framework.version>
        <hibernate.validator.version>5.4.3.Final</hibernate.validator.version>
        <camel.framework.version>2.24.0</camel.framework.version>
        <activemq.framework.version>5.18.3</activemq.framework.version>
        <javasimon.version>4.1.1</javasimon.version>
        <javasimon.jdbc.version>3.5.2</javasimon.jdbc.version>
        <slf4j.version>1.7.25</slf4j.version>
        <log4j.version>2.17.1</log4j.version>
        <exec.maven.plugin.version>1.4.0</exec.maven.plugin.version>
        <jackson.version>2.14.1</jackson.version>
        <jackson.databind.version>2.14.1</jackson.databind.version>
        <commons.configuration2.version>2.9.0</commons.configuration2.version>
        <javax.jms-api.version>2.0.1</javax.jms-api.version>
        <javax.annotation.api.version>1.3.2</javax.annotation.api.version>
        <commons.lang3.version>3.10</commons.lang3.version>
        <tika.core.version>2.9.1</tika.core.version>
        <mockito.core.version>4.9.0</mockito.core.version>
        <commons.beanutils.version>1.9.4</commons.beanutils.version>
        <google.protobuf.version>3.16.3</google.protobuf.version>
        <springfox.swagger.version>3.0.0</springfox.swagger.version>
        <!-- The failsafe package is released under the surefire project. The surefire and failsafe versions should be the same in
        order to maintain cross-compatibility. -->
        <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
        <jgroups.version>4.0.11.Final</jgroups.version>
        <junit.version>4.12</junit.version>
        <hamcrest.version>1.3</hamcrest.version>
        <tomcat.servlet.api.version>7.0.72</tomcat.servlet.api.version>
        <guava.version>27.0.1-jre</guava.version>
        <byte.buddy.version>1.12.18</byte.buddy.version>

        <!-- The C++ SDK install location can be changed by setting the MPF_SDK_INSTALL_PATH environment variable.  -->
        <components.build.script>${project.basedir}/../../openmpf-build-tools/build-openmpf-components/build_components.py</components.build.script>
        <components.build.dir>${user.home}/mpf-component-build</components.build.dir>
        <components.build.sdks.java>${project.basedir}/../../openmpf-java-component-sdk</components.build.sdks.java>
        <components.build.sdks.cpp>${project.basedir}/../../openmpf-cpp-component-sdk</components.build.sdks.cpp>
        <components.build.sdks.python>${project.basedir}/../../openmpf-python-component-sdk</components.build.sdks.python>
        <components.build.search.paths>${project.basedir}/../..</components.build.search.paths>
        <components.build.components>openmpf-components:openmpf-contrib-components</components.build.components>
        <components.build.parallel.builds>1</components.build.parallel.builds>
        <components.build.make.jobs>4</components.build.make.jobs>
        <components.build.package.json/>

        <startup.auto.registration.skip>true</startup.auto.registration.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>hamcrest-core</artifactId>
                    <groupId>org.hamcrest</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!--
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <formats>
                        <format>xml</format>
                    </formats>
                </configuration>
            </plugin>
        </plugins>
        -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
